--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,8 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.26'
     annotationProcessor 'org.projectlombok:lombok:1.18.26'
 
-    implementation 'com.github.zvyap:Hoyoverse-API:master-SNAPSHOT'
+    implementation 'com.github.zvyap:Hoyoverse-API:v0.2'
+    implementation 'club.minnced:discord-webhooks:0.8.2'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
