--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -38,3 +38,5 @@ jobs:
       env:
         USER_1_ID: ${{ secrets.KISSNAVELHK_TOKEN_ID }}
         USER_1_TOKEN: ${{ secrets.KISSNAVELHK_TOKEN }}
+        USER_2_ID: ${{ secrets.LAWQZYZ_TOKEN_ID }}
+        USER_2_TOKEN: ${{ secrets.LAWQZYZ_TOKEN }}
